--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,25 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AltaClienteActivity" />
+        <activity android:name=".ListarPlatosActivity" />
+        <activity android:name=".AltaPlatoActivity" />
+        <activity android:name=".PedidoActivity" />
 
-        <activity android:name=".AltaClienteActivity">
-        </activity>
 
-        <activity android:name=".ListarPlatosActivity"></activity>
-        <activity android:name=".AltaPlatoActivity"></activity>
+        <receiver android:name=".NotificationPublisher"
+            android:enabled="true"
+            android:exported="true">
+        </receiver>
+
     </application>
 
 </manifest>
